--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "accounts-api",
-  "version": "0.0.2",
-  "description": "This example app follows a few constraints to try and make it easy to plug into a node http server.",
+  "version": "0.0.4",
+  "description": "An accounts api that follows a few contraints to try and make it easy to plug into a node http server",
   "main": "index.js",
   "directories": {
     "test": "tests"
